# frigatecfg

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  frigatecfg.code-workspace  pyproject.toml
config/: config.yml
src/frigatecfg/: app.py  brand_database.py  camera_discovery.py  config_manager.py  config_schema.py  credential_loader.py  docker_manager.py  models.py
src/frigatecfg/routes/: actions.py  cameras.py  credentials.py  discovery.py  main.py  settings.py
src/frigatecfg/templates/: base.html  index.html  macros.html
src/frigatecfg/templates/partials/: action_result.html  camera_editor.html  camera_form.html  camera_list.html  credentials.html  custom_brand_form.html  custom_brands.html  dashboard.html  discovery.html  discovery_add_result.html  discovery_brand_urls.html  discovery_detail.html  discovery_port_results.html  discovery_scan_results.html  error.html  field_render.html  scan_history_dropdown.html  section_editor.html  status.html  stream_rows.html  test_result.html  versions.html
static/css/: main.css
static/js/: app.js
static/sass/: _variables.sass  main.sass
tests/: frigate_schema.py  mock_form.py  test_config.py
