[project]
name = "frigatecfg"
version = "0.1.0"
description = "Configuration management UI for Frigate"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "libsass>=0.23",
    "onvif-zeep>=0.2",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frigatecfg"]

[tool.ruff]
line-length = 100
target-version = "py311"
